<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="activity.MainActivity">

    <item
        android:id="@+id/action_home"
        android:title="@string/action_home"
        android:orderInCategory="100"
        android:icon="@drawable/home"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:orderInCategory="100"
        android:icon="@drawable/search"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/checkable_menu"
        android:checkable="true"
        android:title="@string/toggle_service" />
    <item
        android:id="@+id/action_aboutus"
        android:title="@string/action_aboutus"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_contactus"
        android:title="@string/action_contactus"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:title="@string/action_help"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>