<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fields_frag"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.admin.broadconnect_rtr.activity.DesktopWallboard">


    <com.example.admin.broadconnect_rtr.MultiSpinnerApi.MultiSpinnerSearch
        android:id="@+id/searchMultiSpinnerUnlimited"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:hintText="Select Devices" />

    <com.example.admin.broadconnect_rtr.MultiSpinnerApi.MultiSpinnerSearch
        android:id="@+id/searchMultiSpinnerlimited"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:hintText="Select Fields" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/startdate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start" />

        <TextView
            android:id="@+id/start_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/enddate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end" />


        <TextView
            android:id="@+id/end_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.example.admin.broadconnect_rtr.MultiSpinnerApi.MultiSpinnerSearch
            android:id="@+id/timeSpinner"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:hintText="Date Preset" />

        <EditText
            android:id="@+id/servicelevel"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:hint="@string/service_level" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/thresholdtext"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:text="Thresholds-Alerts" />


        <ToggleButton
            android:id="@+id/thresholdtoggle"
            style="@style/Base.V7.ThemeOverlay.AppCompat.Dialog"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:text="@string/threshold" />
    </LinearLayout>


    <Button
        android:id="@+id/Submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_gravity="center_vertical|center_horizontal"/>

</LinearLayout>
